zellij-integration-tests/tests/snapshots/app__edit_scrollback.snap
---
source: zellij-integration-tests/tests/app.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  EDITING SCROLLBACK  + 
$ SCROLLBACK_MARKER_ONE
SCROLLBACK_MARKER_TWO
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
